k8s/prometheus/service.yml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-server-alb
  namespace: monitoring

spec:
  selector:
    app: prometheus
  ports:
  - port: 80
    targetPort: 9090
    name: http-prom
  type: ClusterIP
