k8s/prometheus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "prometheus.terop-kuber.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server-alb
                port:
                  name: http-prom
